// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin ClassDeclaration 1`] = `
"function wrapper({}) {
  class className {
    fn() {
      const i = 0;
    }
  }
  return {
    className
  };
}"
`;

exports[`plugin ExportAllDeclaration 1`] = `
"function wrapper({}) {
  return {};
}"
`;

exports[`plugin ExportDefaultDeclaration 1`] = `
"function wrapper({}) {
  const defaultExport = true;
  return {
    defaultExport
  };
}"
`;

exports[`plugin ExportNamedDeclaration1 1`] = `
"function wrapper({}) {
  const namedSingleExport = true;
  return {
    namedSingleExport
  };
}"
`;

exports[`plugin ExportNamedDeclaration2 1`] = `
"function wrapper({}) {
  return {};
}"
`;

exports[`plugin FunctionDeclaration 1`] = `
"function wrapper({}) {
  function functionName() {
    function i() {}
  }
  return {
    functionName
  };
}"
`;

exports[`plugin ImportDeclaration 1`] = `
"function wrapper({}) {
  return {};
}"
`;

exports[`plugin ImportDefaultSpecifier 1`] = `
"function wrapper({
  defaultImport
}) {
  return {};
}"
`;

exports[`plugin ImportNamespaceSpecifier 1`] = `
"function wrapper({
  namespaceImport
}) {
  return {};
}"
`;

exports[`plugin ImportSpecifier1 1`] = `
"function wrapper({
  singleNamedImport
}) {
  return {};
}"
`;

exports[`plugin ImportSpecifier2 1`] = `
"function wrapper({
  namedImport1,
  namedImport2
}) {
  return {};
}"
`;

exports[`plugin ImportSpecifier3 1`] = `
"function wrapper({
  localImportName
}) {
  return {};
}"
`;

exports[`plugin VariableDeclaration1 1`] = `
"function wrapper({}) {
  var undefinedVar,
      var1 = 1,
      var2 = 2,
      var3 = 3;
  return {
    undefinedVar,
    var1,
    var2,
    var3
  };
}"
`;

exports[`plugin VariableDeclaration2 1`] = `
"function wrapper({}) {
  let undefinedLet,
      let1 = 1,
      let2 = 2,
      let3 = 3;
  return {
    undefinedLet,
    let1,
    let2,
    let3
  };
}"
`;

exports[`plugin VariableDeclaration3 1`] = `
"function wrapper({}) {
  const const1 = 1,
        const2 = 2,
        const3 = 3;
  return {
    const1,
    const2,
    const3
  };
}"
`;

exports[`plugin all 1`] = `
"function wrapper({
  defaultImport,
  singleNamedImport,
  namedImport1,
  namedImport2,
  localImportName,
  namespaceImport
}) {
  class className {
    fn() {
      const i = 0;
    }
  }
  function functionName() {
    function i() {}
  }
  var undefinedVar,
      var1 = 1,
      var2 = 2,
      var3 = 3;
  let undefinedLet,
      let1 = 1,
      let2 = 2,
      let3 = 3;
  const const1 = 1,
        const2 = 2,
        const3 = 3;
  const defaultExport = true;
  const namedSingleExport = true;
  return {
    undefinedVar,
    var1,
    var2,
    var3,
    undefinedLet,
    let1,
    let2,
    let3,
    const1,
    const2,
    const3,
    defaultExport,
    namedSingleExport,
    className,
    functionName
  };
}"
`;
